<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.limaicojose.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="123dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:onClick="ingresarTarea"
        android:text="@string/ingreso_tareas"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:onClick="consultarTareas"
        android:text="@string/consulta_tarea"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textViewTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/tareas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewNumeroTareas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNumeroTareas"
        android:layout_width="88dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewTarea"
        app:layout_constraintStart_toEndOf="@+id/textViewTarea" />

</android.support.constraint.ConstraintLayout>
